prevent jumping content on preview pages

--- a/app/react/App/scss/modules/_markdown.scss
+++ b/app/react/App/scss/modules/_markdown.scss
@@ -30,6 +30,10 @@
       border-bottom: 1px solid $c-primary;
     }
   }
+  .tab-content {
+    float: left;
+    width: 100%;
+  }
 }
 
 .page-viewer .markdownViewer {
